change color of the game name  and remove border from canvas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="row">
             <div class="hangman_draw">
-                <canvas id="hangman_canvas" width="400" height="350" style="border:1px solid #000000;">
+                <canvas id="hangman_canvas" width="400" height="350">
                 </canvas>
             </div>
             <div class="letters"></div>
